--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,22 +10,116 @@
   <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
   <script src="assets/javascript/game.js"></script>
 </head>
+
 <body>
   <h1>Star Wars RPG</h1>
-  <div class="character-select">
-    <!-- <div class="character defender">
-      <span class="name">Obi-Wan Kenobi</span>
-      <img src="assets/images/obi-wan.jpg" alt="">
-      <span class="hp">100</span>
-    </div> -->
+
+  <div class="play-area">
+    <div id="character-select">
+      <h2>Select a character to play</h2>
+      <div class="character kenobi" data-name="kenobi">
+        <span class="name">Obi-Wan Kenobi</span>
+        <img src="assets/images/obi-wan.jpg" alt="">
+        <span class="hp">120</span>
+      </div>
+      <div class="character skywalker" data-name="skywalker">
+        <span class="name">Luke Skywalker</span>
+        <img src="assets/images/luke-skywalker.jpg" alt="">
+        <span class="hp">100</span>
+      </div>
+      <div class="character sidious" data-name="sidious">
+        <span class="name">Darth Sidious</span>
+        <img src="assets/images/darth-sidious.jpg" alt="">
+        <span class="hp">150</span>
+      </div>
+      <div class="character maul" data-name="maul">
+        <span class="name">Darth Maul</span>
+        <img src="assets/images/darth-maul.jpg" alt="">
+        <span class="hp">180</span>
+      </div>
+    </div>
+
+    <div id="player" class="d-none">
+      <h2>Your Character</h2>
+      <div class="character d-none kenobi" data-name="kenobi">
+        <span class="name">Obi-Wan Kenobi</span>
+        <img src="assets/images/obi-wan.jpg" alt="">
+        <span class="hp">120</span>
+      </div>
+      <div class="character d-none skywalker" data-name="skywalker">
+        <span class="name">Luke Skywalker</span>
+        <img src="assets/images/luke-skywalker.jpg" alt="">
+        <span class="hp">100</span>
+      </div>
+      <div class="character d-none sidious" data-name="sidious">
+        <span class="name">Darth Sidious</span>
+        <img src="assets/images/darth-sidious.jpg" alt="">
+        <span class="hp">150</span>
+      </div>
+      <div class="character d-none maul" data-name="maul">
+        <span class="name">Darth Maul</span>
+        <img src="assets/images/darth-maul.jpg" alt="">
+        <span class="hp">180</span>
+      </div>
+    </div>
+
+    <button id="attack" class="d-none">Attack</button>
+
+    <div id="defender" class="d-none">
+      <h2>Defender</h2>
+      <div class="character d-none kenobi" data-name="kenobi">
+        <span class="name">Obi-Wan Kenobi</span>
+        <img src="assets/images/obi-wan.jpg" alt="">
+        <span class="hp">120</span>
+      </div>
+      <div class="character d-none skywalker" data-name="skywalker">
+        <span class="name">Luke Skywalker</span>
+        <img src="assets/images/luke-skywalker.jpg" alt="">
+        <span class="hp">100</span>
+      </div>
+      <div class="character d-none sidious" data-name="sidious">
+        <span class="name">Darth Sidious</span>
+        <img src="assets/images/darth-sidious.jpg" alt="">
+        <span class="hp">150</span>
+      </div>
+      <div class="character d-none maul" data-name="maul">
+        <span class="name">Darth Maul</span>
+        <img src="assets/images/darth-maul.jpg" alt="">
+        <span class="hp">180</span>
+      </div>
+    </div>
+
+    <div id="fight" class="d-none">
+      
+      <div id="message"></div>
+      <button id="reset" class="d-none">Restart</button>
+    </div>
+
+    <div id="enemies" class="d-none">
+      <h2>Enemies Available to Attack</h2>
+      <div class="character d-none kenobi" data-name="kenobi">
+        <span class="name">Obi-Wan Kenobi</span>
+        <img src="assets/images/obi-wan.jpg" alt="">
+        <span class="hp">120</span>
+      </div>
+      <div class="character d-none skywalker" data-name="skywalker">
+        <span class="name">Luke Skywalker</span>
+        <img src="assets/images/luke-skywalker.jpg" alt="">
+        <span class="hp">100</span>
+      </div>
+      <div class="character d-none sidious" data-name="sidious">
+        <span class="name">Darth Sidious</span>
+        <img src="assets/images/darth-sidious.jpg" alt="">
+        <span class="hp">150</span>
+      </div>
+      <div class="character d-none maul" data-name="maul">
+        <span class="name">Darth Maul</span>
+        <img src="assets/images/darth-maul.jpg" alt="">
+        <span class="hp">180</span>
+      </div>
+    </div>
   </div>
-  <h2>Your Character</h2>
-  <div class="your-character"></div>
-  <h2>Enemies Available to Attack</h2>
-  <div class="enemies"></div>
-  <h2>Fight Section</h2>
-  <div class="fight-section"></div>
-  <h2>Defender</h2>
-  <div class="defender"></div>
+  
 </body>
+
 </html>
