Replace characters and balance hp and attack powers

--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
   <div class="play-area">
     <div id="character-select">
       <h2>Select a character to play</h2>
-      <div class="character kenobi" data-name="kenobi">
-        <span class="name">Obi-Wan Kenobi</span>
-        <img src="assets/images/obi-wan.jpg" alt="">
+      <div class="character rey" data-name="rey">
+        <span class="name">Rey</span>
+        <img src="assets/images/rey.png" alt="">
         <span class="hp">120</span>
       </div>
-      <div class="character skywalker" data-name="skywalker">
-        <span class="name">Luke Skywalker</span>
-        <img src="assets/images/luke-skywalker.jpg" alt="">
+      <div class="character kylo" data-name="kylo">
+        <span class="name">Kylo</span>
+        <img src="assets/images/kylo.png" alt="">
+        <span class="hp">130</span>
+      </div>
+      <div class="character finn" data-name="finn">
+        <span class="name">Finn</span>
+        <img src="assets/images/finn.png" alt="">
+        <span class="hp">110</span>
+      </div>
+      <div class="character snoke" data-name="snoke">
+        <span class="name">Snoke</span>
+        <img src="assets/images/snoke.png" alt="">
         <span class="hp">100</span>
-      </div>
-      <div class="character sidious" data-name="sidious">
-        <span class="name">Darth Sidious</span>
-        <img src="assets/images/darth-sidious.jpg" alt="">
-        <span class="hp">150</span>
-      </div>
-      <div class="character maul" data-name="maul">
-        <span class="name">Darth Maul</span>
-        <img src="assets/images/darth-maul.jpg" alt="">
-        <span class="hp">180</span>
       </div>
     </div>
 
