Add styling for font and character cards

--- a/index.html
+++ b/index.html
@@ -19,24 +19,24 @@
     <div id="character-select">
       <h2>Select a character to play</h2>
       <div class="character rey" data-name="rey">
-        <span class="name">Rey</span>
+        <p class="name">Rey</p>
         <img src="assets/images/rey.png" alt="">
-        <span class="hp">115</span>
+        <p class="hp">115</p>
       </div>
       <div class="character kylo" data-name="kylo">
-        <span class="name">Kylo</span>
+        <p class="name">Kylo</p>
         <img src="assets/images/kylo.png" alt="">
-        <span class="hp">130</span>
+        <p class="hp">130</p>
       </div>
       <div class="character finn" data-name="finn">
-        <span class="name">Finn</span>
+        <p class="name">Finn</p>
         <img src="assets/images/finn.png" alt="">
-        <span class="hp">110</span>
+        <p class="hp">110</p>
       </div>
       <div class="character snoke" data-name="snoke">
-        <span class="name">Snoke</span>
+        <p class="name">Snoke</p>
         <img src="assets/images/snoke.png" alt="">
-        <span class="hp">110</span>
+        <p class="hp">110</p>
       </div>
     </div>
 
